KM-529: fixed icon alignment on connect page.

--- a/src/components/connect/connectPage.scss
+++ b/src/components/connect/connectPage.scss
@@ -96,7 +96,7 @@
   .connect-contact-info {
     .material-icons {
       vertical-align: top;
-      padding-top: 2px;
+      margin-top: -2px;
     }
   }
 }
@@ -105,7 +105,7 @@
   .connect-contact-info {
     .material-icons {
       vertical-align: top;
-      padding-top: 5px;
+      margin-top: 0px;
     }
   }
 }
