--- a/src/style.scss
+++ b/src/style.scss
@@ -677,6 +677,7 @@ a {
   font-weight: 600;
   font-size: 1rem;
   letter-spacing: 0.05rem;
+  line-height: 1;
   text-decoration: none;
   white-space: nowrap;
   float: left;
